[package]
name = "stun-format"
version = "0.1.0"
edition = "2021"

[features]
rfc3489 = []
rfc5389 = []
rfc5245 = []
rfc5780 = []
rfc5766 = []
rfc8489 = []
rfc8445 = []
rfc8656 = []
rfc6679 = []
rfc7635 = []
rfc7982 = []
rfc8016 = []
rfc6062 = []
iana    = ["rfc5780", "rfc8489", "rfc8445", "rfc8656", "rfc6679", "rfc7635", "rfc7982", "rfc8016", "rfc6062"]
fmt     = []

default = ["iana"]

[dependencies]
r-ex = { version = "1.0.0", features = ["carve", "endian", "splice", "from-ref", "from-arr"] }
stun-bytes = { version = "1.0.0" }
