[package]
name = "stun-format"
version = "1.0.0"
authors = ["pradt2"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/pradt2/stun-format"
license = "MIT"

description = "No-std STUN parser for ALL RFCs"
keywords = ["stun", "stun-parser", "zero-copy", "io"]
categories = ["no-std", "network-programming", "data-structures"]

[features]
rfc3489 = []
rfc5389 = []
rfc5245 = []
rfc5780 = []
rfc5766 = []
rfc8489 = []
rfc8445 = []
rfc8656 = []
rfc6679 = []
rfc7635 = []
rfc7982 = []
rfc8016 = []
rfc6062 = []
iana    = ["rfc5780", "rfc8489", "rfc8445", "rfc8656", "rfc6679", "rfc7635", "rfc7982", "rfc8016", "rfc6062"]
fmt     = []

default = ["iana"]

[dependencies]
r-ex = { version = "1.0.0", features = ["carve", "endian", "splice", "from-ref", "from-arr"] }
stun-bytes = { version = "1.0.0" }
